# stack-connect-core

./: .gitignore  Cargo.toml  README.md  RUST_CORE_PLAN.md  justfile  rust-toolchain.toml
.github/workflows/: ci.yml
bindings/dart/stack_core_rust/: .gitignore  README.md  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
bindings/dart/stack_core_rust/lib/: stack_core_rust.dart
bindings/swift/: Package.swift
bindings/swift/Sources/StackCore/: .gitkeep
bindings/swift/Sources/StackCoreRust/: StackCoreRust.swift
bindings/swift/Tests/StackCoreTests/: SmokeTests.swift
bindings/swift/smoke/: main.swift
crates/stack_core/: Cargo.toml  uniffi.toml
crates/stack_core/src/: domain.rs  error.rs  facade.rs  frb_api.rs  frb_generated.rs  lib.rs  ports.rs
crates/stack_core/src/api/: play.rs
crates/stack_core/src/auth/: es256.rs  jwt.rs  mod.rs  oauth.rs  service_account.rs
crates/stack_core/src/providers/: mod.rs
crates/stack_core/src/providers/appstore/: client.rs  mod.rs  provider.rs
crates/stack_core/src/service/: kind.rs  mod.rs  provider.rs  registry.rs  sync.rs
crates/stack_core/src/service/capabilities/: accessibility_declarations.rs  app_metadata.rs  app_store_versions.rs  beta_app_localizations.rs  beta_app_review_detail.rs  beta_build_localizations.rs  beta_groups.rs  builds.rs  bundle_ids.rs  certificates.rs  devices.rs  mod.rs  profiles.rs  reviews.rs  users.rs
crates/stack_core/tests/: facade_smoke.rs
crates/stack_core/tests/fixtures/: test_ec_private.p8  test_ec_public.pem  test_rsa_private.pem  test_rsa_public.pem
docs/: WINDOWS_DESKTOP_TESTING.md
